--- a/src/styles.css
+++ b/src/styles.css
@@ -20,28 +20,32 @@ img {
 .box > :nth-child(1) {
   height: 100px;
   position: absolute;
-  top: 0;
+  top: 10px;
   left: 0;
   z-index: 1;
+  -webkit-transform: rotate(-10deg);
 }
 .box > :nth-child(2) {
   height: 100px;
   position: absolute;
-  top: 0;
+  top: 5px;
   left: 30px;
   z-index: 2;
+  -webkit-transform: rotate(0deg);
 }
 .box > :nth-child(3) {
   height: 100px;
   position: absolute;
-  top: 0;
+  top: 2px;
   left: 60px;
   z-index: 3;
+  -webkit-transform: rotate(10deg);
 }
 .box > :nth-child(4) {
   height: 100px;
   position: absolute;
-  top: 0;
+  top: 1px;
   left: 90px;
   z-index: 4;
+  -webkit-transform: rotate(20deg);
 }
